Bug 553154  - Save and load print settings consistently and correctly. Patch by Markus Stange <mstange@themasta.com>, r/sr=smorgan